[tool.poetry]
name = "novelist-agent"
version = "0.1.0"
description = ""
authors = ["stevechan <chanshunli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.group.dev.dependencies]
autogen = "^0.3.2"
langfuse = "^2.53.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
